--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "packageManager": "pnpm@9.1.0",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "serve": "pnpm run build && vite preview"
   },
   "dependencies": {
     "@solidjs/router": "^0.13.3",
@@ -35,6 +36,7 @@
     "stylelint-config-recommended-scss": "^14.0.0",
     "eslint-plugin-solid": "^0.14.0",
     "vite": "^5.2.12",
-    "vite-plugin-solid": "^2.10.2"
+    "vite-plugin-solid": "^2.10.2",
+    "prettier": "^3.2.5"
   }
 }
